# dict-app

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  build-android-native.sh  capture-app-media.sh  capture-device-auto.sh  collect-device-logs.sh  run-android-tests.sh  run-e2e.sh  rust-toolchain.toml
.cargo/: config.toml
.zellij/: layout.kdl
android/: gradle.properties  gradlew  gradlew.bat  keystore.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/: AndroidManifest.xml
android/app/src/androidTest/assets/: test-dict.db
android/app/src/androidTest/java/org/example/dictapp/: AppCaptureTest.kt  DeviceDiagnosticTest.kt  DictAppE2ETest.kt  DictCoreBenchmark.kt  DictCoreIntegrationTest.kt  JsonParsingBenchmark.kt  PerformanceTest.kt  UiPerformanceTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/example/dictapp/: DefineWordActivity.kt  DictCore.kt  MainActivity.kt
android/app/src/main/java/org/example/dictapp/download/: DownloadManager.kt
android/app/src/main/java/org/example/dictapp/settings/: SettingsRepository.kt
android/app/src/main/java/org/example/dictapp/ui/: DefinitionScreen.kt  DesignSystemScreen.kt  DownloadScreen.kt  PartOfSpeech.kt  QuickDefinitionDialog.kt  SearchScreen.kt  SettingsScreen.kt  TestTags.kt
android/app/src/main/java/org/example/dictapp/ui/theme/: Theme.kt
android/app/src/main/java/org/example/dictapp/viewmodel/: DictViewModel.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
core/: Cargo.toml
core/benches/: performance.rs
core/sql/: schema.sql
core/src/: db.rs  ffi.rs  import.rs  lib.rs  models.rs  search.rs
docs/: e2e-testing-issue.md
lib/: android-backend.sh
tools/preprocessor/: Cargo.toml
tools/preprocessor/src/: main.rs
tools/scripts/: download-data.sh
